fix: updated question text color to be visible on page

--- a/src/app.css
+++ b/src/app.css
@@ -110,6 +110,7 @@ a {
     flex-direction: column;
     align-items: center;
     margin: 20px;
+    color:black;
 }
 
 .game-question-image {
